change uwsgi user to http

--- a/scriptar.ini
+++ b/scriptar.ini
@@ -4,8 +4,8 @@ module = wsgi
 master = true
 processes = 5
 
-uid = nginx
-gid = nginx
+uid = http
+gid = http
 
 socket = scriptar.sock
 chmod-socket = 660
