--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 appdirs==1.4.0
 click==6.7
 Flask==0.12
-Flask-MySQL==1.4.0
 itsdangerous==0.24
 Jinja2==2.9.4
 MarkupSafe==0.23
+mysql-connector==2.1.4
 packaging==16.8
 PyMySQL==0.7.9
 pyparsing==2.1.10
