--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Jinja2==2.9.6
 MarkupSafe==1.0
 mysql-connector==2.1.4
 packaging==16.8
+passlib==1.7.1
 PyMySQL==0.7.11
 pyparsing==2.2.0
 six==1.10.0
